#ifndef COMPANYCLIENT_H
#define COMPANYCLIENT_H

#include "Client.h"



class CompanyClient :
	protected Client
{
public:
	CompanyClient();
	~CompanyClient();
};

#endif // !COMPANYCLIENT_H
